# foxwebsite

./: LICENSE  README-Zn.md  README.md  README_CN_FT.md  README_JP.md  README_ZN_FT.md  home.html  pyproject.toml  test.py
.github/workflows/: python-publish.yml
foxwebsite/: __init__.py  framework.py
